# Sparkler

./: .gitignore  CMakeLists.txt  README.md  Raytracer.sln
Raytracer/: Raytracer.vcxproj  Raytracer.vcxproj.filters  ~AutoRecover.Raytracer.vcxproj
Raytracer/Lib/Raytracer/: vc120.idb
Raytracer/Lib/Raytracer/Raytracer.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Raytracer.lastbuildstate  cl.command.1.tlog  lib.command.1.tlog
Raytracer/res/: KDTreeTemplate.cpp
Raytracer/res/test_scenes/: AreaLight.test  CornellBox.test  DebugScene.test  EnvMapping.test  FastAreaLight.test  PlaneBug.test  PlaneBug1.test  Refraction.test  scene6.test  scene7.test
Raytracer/src/: main.cpp
Raytracer/src/core/: Camera.cpp  Camera.h  Color.cpp  Color.h  DisplayObject.cpp  DisplayObject.h  Film.cpp  Film.h  Light.cpp  Light.h  Raytracer.cpp  Raytracer.h  Scene.cpp  Scene.h  World.cpp  World.h
Raytracer/src/core/Light/: AreaLight.cpp  AreaLight.h  DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h
Raytracer/src/core/lights/: AreaLight.cpp  AreaLight.h  DirectionalLight.cpp  DirectionalLight.h  FastAreaLight.cpp  FastAreaLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h
Raytracer/src/core/materials/: DiffuseMaterial (Конфликтующая копия с компьютера Albert_ZenBook 2015-08-18).cpp  DiffuseMaterial.cpp  DiffuseMaterial.h  Material.cpp  Material.h  MaterialProperties.h  SimpleMaterial.cpp  SimpleMaterial.h  Texture.cpp  Texture.h
Raytracer/src/geometry/: Collision.cpp  Collision.h  Material.h  Shape.cpp  Shape.h  TexturedObject.cpp  TexturedObject.h
Raytracer/src/geometry/primitives/: Box.cpp  Box.h  Plane.cpp  Plane.h  Primitive.cpp  Primitive.h  Ray.cpp  Ray.h  Rectangle.cpp  Rectangle.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
Raytracer/src/utils/: Color.cpp  Color.h  Constants.h  Direction.cpp  Direction.h  Mathf.cpp  Mathf.h  Mathf.inl  Parser.cpp  Parser.h  Point.cpp  Point.h  SceneBuilder.cpp  SceneBuilder.h  ShittyParser.cpp  ShittyParser.h
Resources/Include/glm/detail/: setup.hpp  type_vec4.hpp
Resources/Libs/: Raytracer.lib  gtest.lib  gtestd.lib
Resources/Testscenes/: EarthAndMoon.cpp  Materals  Moon.cpp  RaytracerTmp.cpp  TestScenes.cpp  TransparentSphere.cpp  TransparentSphere1.cpp
Resources/Testscenes/hw3-submissionscenes/: CornellBox.test  scene4-specular.test  scene6.test
Tests/: CameraTests.cpp  CameraTests.h  FilmTests.cpp  FilmTests.h  RayTests.cpp  RayTests.h  Tests.vcxproj  Tests.vcxproj.filters  main.cpp
builds/: Raytracer  Raytracer (Конфликтующая копия с компьютера PC11 2014-12-04)
resources/scenes/: scene0.test
src/: main.cpp
src/core/: Camera.cpp  Camera.h  DisplayObject.cpp  DisplayObject.h  Film.cpp  Film.h  Light.cpp  Light.h  Material.cpp  Material.h  Raytracer.cpp  Raytracer.h  Scene.cpp  Scene.h
src/geometry/: Collision.h  CoordinateSystem.cpp  CoordinateSystem.h  ITracer.h  Light.cpp  Light.h  Material.h  Primitive.cpp  Primitive.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/geometry/primitives/: Primitive.h  Ray.cpp  Ray.h  Triangle.cpp  Triangle.h
src/utils/: Math.cpp  Mathf.h  Parser.cpp  Parser.h
unit_tests/: runUnitTests.cpp
